# quality_inspection

./: CMakeLists.txt  README.md  package.xml  pointCloud0.pcd  pozicieRobota.xml
action/: MovRobToScanPos.action
calibration/: calibrationCapturedPoints.txt  calibrationPoses.txt  calibrationTransformationMatrix.txt
config/: quality_inspection.yaml
fliesInRobot/: EkiHwInterface.xml  test.src
include/: Semaphore.h  auxiliaries.h  main_control_node.h  my_semaphore.h  my_transform.hpp  processScan.h  projections.h  projectionsNode.h  projections_creation.h  projections_creation_node.h  robot_communication_node.h  scanProcessing.h  scanProcessingNode.h  scan_processing.h  scan_processing_node.h  scanning_simulation_node.h
launch/: quality_inspection.launch  quality_inspection_test.launch
non_ros/fliesInRobot/: EkiHwInterface.xml  test.src
non_ros/input_data_quality_inspection/: expectedInitialTransform.txt  pointCloudCAD101Ktransformed.pcd  rivetPositions.txt  robotScanningPoses.txt
src/: main.cpp  main_control_node.cpp  movRobToScanPos.cpp  processScan.cpp  projectionsNode.cpp  projections_creation_node.cpp  robot_communication_node.cpp  scanProcessing.cpp  scanProcessingNode.cpp  scan_processing.cpp  scan_processing_node.cpp  scanning_simulation_node.cpp  testdataPublisherInPC.cpp  transformCAD.cpp  transform_cad.cpp
srv/: create2Dprojections.srv
testClientInPC/: socketClient  socketClient.cpp
