<?xml version="1.0"?>
<package format="2">
  <name>quality_inspection</name>
  <version>0.0.0</version>
  <description>The quality_inspection package</description>
  <maintainer email="samuelkostur@gmail.com">Samuel Kostur</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>phoxi_camera</depend>
  <depend>tinyxml</depend>
  <depend>opencv2</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
